# docker-git-mirror

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
scripts/: init_mirrors.py  startup.sh
src/: main.rs
