[package]
name = "git-sync"
edition = "2021"
publish = true
version = "0.1.0"
description = "Simple tool to create and maintain a backup sync of your own repo"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }

toml = "0.8.20"
execute = "0.2.13"
